--- a/frontend-android/app/src/main/res/navigation/mobile_navigation.xml
+++ b/frontend-android/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,6 +14,6 @@
     <fragment
         android:id="@+id/nav_slideshow"
         android:name="com.app.itu.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:label="Favourites"
         tools:layout="@layout/fragment_slideshow" />
 </navigation>
