Added log out, merge.

--- a/frontend-android/app/src/main/res/layout/nav_header_main.xml
+++ b/frontend-android/app/src/main/res/layout/nav_header_main.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginBottom="14dp"
+        android:background="#673AB7"
         android:text="Log in"
         app:layout_constraintBottom_toTopOf="@+id/textViewName"
         app:layout_constraintEnd_toEndOf="parent"
