--- a/frontend-android/app/src/main/res/layout/list_item.xml
+++ b/frontend-android/app/src/main/res/layout/list_item.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<!--
+    Projekt ITU
+        Autori:
+            xslesa01 (Michal Šlesár)
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
